# Generated by Django 5.0.2 on 2025-04-29 16:40

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='DiseaseDescription',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('disease', models.CharField(max_length=100, unique=True)),
                ('description', models.TextField()),
            ],
            options={
                'db_table': 'disease_description_data',
            },
        ),
        migrations.CreateModel(
            name='DiseaseDiet',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('disease', models.CharField(max_length=100, unique=True)),
                ('diet1', models.CharField(blank=True, max_length=200, null=True)),
                ('diet2', models.CharField(blank=True, max_length=200, null=True)),
                ('diet3', models.CharField(blank=True, max_length=200, null=True)),
                ('diet4', models.CharField(blank=True, max_length=200, null=True)),
            ],
            options={
                'db_table': 'disease_diet_data',
            },
        ),
        migrations.CreateModel(
            name='DiseaseMedicine',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('disease', models.CharField(max_length=100, unique=True)),
                ('medicine1', models.CharField(blank=True, max_length=200, null=True)),
                ('medicine2', models.CharField(blank=True, max_length=200, null=True)),
                ('medicine3', models.CharField(blank=True, max_length=200, null=True)),
                ('medicine4', models.CharField(blank=True, max_length=200, null=True)),
            ],
            options={
                'db_table': 'disease_medicine_data',
            },
        ),
        migrations.CreateModel(
            name='DiseasePrecaution',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('disease', models.CharField(max_length=100, unique=True)),
                ('precaution1', models.CharField(blank=True, max_length=200, null=True)),
                ('precaution2', models.CharField(blank=True, max_length=200, null=True)),
                ('precaution3', models.CharField(blank=True, max_length=200, null=True)),
                ('precaution4', models.CharField(blank=True, max_length=200, null=True)),
            ],
            options={
                'db_table': 'disease_precaution_data',
            },
        ),
        migrations.CreateModel(
            name='DiseaseTraining',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('disease', models.CharField(max_length=100)),
                ('symptom1', models.CharField(blank=True, max_length=100, null=True)),
                ('symptom2', models.CharField(blank=True, max_length=100, null=True)),
                ('symptom3', models.CharField(blank=True, max_length=100, null=True)),
                ('symptom4', models.CharField(blank=True, max_length=100, null=True)),
                ('symptom5', models.CharField(blank=True, max_length=100, null=True)),
            ],
            options={
                'db_table': 'disease_training_data_data',
            },
        ),
        migrations.CreateModel(
            name='DiseaseWorkout',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('disease', models.CharField(max_length=100, unique=True)),
                ('workout1', models.CharField(blank=True, max_length=200, null=True)),
                ('workout2', models.CharField(blank=True, max_length=200, null=True)),
                ('workout3', models.CharField(blank=True, max_length=200, null=True)),
                ('workout4', models.CharField(blank=True, max_length=200, null=True)),
            ],
            options={
                'db_table': 'disease_workout_data',
            },
        ),
        migrations.CreateModel(
            name='SymptomSeverity',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('symptom', models.CharField(max_length=100, unique=True)),
                ('weight', models.IntegerField()),
            ],
            options={
                'db_table': 'symptom_severity_data',
            },
        ),
    ]
